🐛 bugfix: remove  overflow: hidden;
ref ant-design/ant-design-pro#6096

--- a/src/Form/index.less
+++ b/src/Form/index.less
@@ -1,14 +1,16 @@
 @import '~antd/es/style/themes/default.less';
+@import '~antd/es/style/mixins/index.less';
 
 @table-search-prefix-cls: ~'@{ant-prefix}-pro-table-search';
 
 @table-form-prefix-cls: ~'@{ant-prefix}-pro-table-form';
 
 .@{table-search-prefix-cls} {
+  .clearfix;
+
   margin-bottom: 24px;
   padding: 24px;
   padding-bottom: 0;
-  overflow: hidden;
   background: @component-background;
 
   &.@{table-form-prefix-cls} {
